# investigate_ps4_chiaki_app

./: .gitignore  CMakeLists.txt  README.md
gui/: CMakeLists.txt  main.c
lib/: CMakeLists.txt
lib/include/app/: base64.h  common.h  session.h  thread.h
lib/include/ps4app/: base64.h  common.h  ctrl.h  http.h  log.h  rpcrypt.h  session.h  thread.h
lib/src/: base64.c  common.c  ctrl.c  http.c  log.c  rpcrypt.c  session.c  thread.c
test/: CMakeLists.txt  http.c  main.c  rpcrypt.c
